# binary-orbits

./: .gitignore  Dockerfile  README.md  config.js  desmos.js  index.html  lambda_function.py  main.js  main.tf  myscript.py  sample-data.json  server.py  state.json  style.css  styles.css
.github/workflows/: create-config.yml
deploy/: binary-orbit-deploy@.service  binary-orbit-deploy@.timer  binary-orbit-main.service  binary-orbit-prod.service  binary-orbit-restart@.path  binary-orbit-restart@.service  binary-orbit-staging.service  cloudflared-r71-bypass.nft  setup-pi-env.sh  sudoers-binary-orbit
deploy/cloudflared-r71.service.d/: bypass-protonvpn.conf
rust/: Cargo.toml  pyproject.toml
rust/.cargo/: config.toml
rust/benches/: calc_loss.rs
rust/src/: de.rs  free_params.rs  lib.rs  refine.rs  sgd.rs
rust/tests/: de.rs  optimizers.rs  parity.rs
scripts/: bench_integration.py
